Fixed deprecations (junit, newInstance) in some test classes